--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -10,8 +10,8 @@ html,
 body {
   min-height: 100vw;
   margin: 0;
-  /* padding: 0;
-  background-color: #FFB700; */
+  /* padding: 0;*/
+  /* background-color: #FFB700;  */
 }
 
 .activities-section {
