--- a/FrontEnd/src/assets/styles/organisme.css
+++ b/FrontEnd/src/assets/styles/organisme.css
@@ -4,101 +4,158 @@
 
  }
 
- @media (max-width: 480px) {
-
-     /* * {
-  outline: 1px solid red;
-} */
-     .organisme-container {
-         margin: 2rem;
-         border: #E3DBD8 1px solid;
-         /* background-color: red; */
-         display: flex;
-         flex-direction: column-reverse;
-         height: 75vh;
-
-     }
-
-     .image1 {
-         /* background-color: aquamarine; */
-         top: 2%;
-         width: 98%;
-     }
-
-     .containers {
-         height: 80%;
-         display: flex;
-         align-items: end;
-         width: 100%;
-         /* background-color: blueviolet; */
 
 
-     }
 
-     .organisme-section {
-         /* background-color: blue; */
-         margin-top: -20%;
-     }
+/* Écrans très petits : de 320px à 359px */
+@media (min-width: 320px) and (max-width: 359px) {
+  .organisme-container {
+    margin: 2rem;
+    /* background-color: aqua; */
+    padding: 2rem;
+    border: #E3DBD8 1px solid;
+    display: flex;
+    flex-direction: column-reverse;
+    height: 98vh;
+  }
 
-     .button1 {
-         border-radius: 0.3rem;
-     }
+  .image1 {
+    top: 2%;
+    width: 100%;
+  }
 
-     .button2 {
-         border-radius: 0.3rem;
-     }
- }
+  .organisme-section {
+    margin-top: -12%;
+  }
 
- @media (min-width: 320px) and (max-width: 390px) {
-     .organisme-container {
-         margin: 2rem;
-         /* margin-top:-10%; */
-         /* background-color: aqua; */
-         padding: 2rem;
-         border: #E3DBD8 1px solid;
-         display: flex;
-         flex-direction: column-reverse;
-         height: 95vh;
-     }
+  .titre1 {
+    font-size: x-large;
+  }
 
-     .image1 {
-         /* background-color: red; */
-         top: 2%;
-         width: 100%;
-     }
+  .bare1 {
+    margin-top: 1rem;
+  }
 
-     .organisme-section {
-         /* background-color: blue; */
-         margin-top: -12%;
-     }
+  .containers {
+    display: flex;
+    align-items: end;
+  }
 
-     .titre1 {
-         /* background-color: blueviolet; */
-         font-size: x-large;
-     }
+  .button1,
+  .button2 {
+    border-radius: 0.3rem;
+  }
+}
 
-     .bare1 {
-         /* background-color: aqua; */
-         margin-top: 1rem;
-     }
+/* Petits écrans : 360px à 389px */
+@media (min-width: 360px) and (max-width: 389px) {
+  .organisme-container {
+    margin: 2rem;
+    /* background-color: aqua; */
+    padding: 2rem;
+    border: #E3DBD8 1px solid;
+    display: flex;
+    flex-direction: column-reverse;
+    height: 100vh;
+  }
 
-     .containers {
-         display: flex;
-         align-items: end;
-         /* top: -5%; */
-         /* background-color: blueviolet;     */
+  .image1 {
+    top: 2%;
+    width: 100%;
+  }
 
-     }
+  .organisme-section {
+    margin-top: -5%;
+  }
+
+  .titre1 {
+    font-size: x-large;
+  }
+
+  .bare1 {
+    margin-top: 1rem;
+  }
+
+  .containers {
+    display: flex;
+    align-items: end;
+  }
+
+  .button1,
+  .button2 {
+    border-radius: 0.3rem;
+  }
+}
+
+/* Moyens écrans : 390px à 409px */
+@media (min-width: 390px) and (max-width: 409px) {
+  .organisme-container {
+    margin: 2rem;
+    /* background-color: aqua; */
+    padding: 2rem;
+    border: #E3DBD8 1px solid;
+    display: flex;
+    flex-direction: column-reverse;
+    height: 80vh;
+  }
+}
+
+/* Taille spéciale : 410px à 429px */
+@media (min-width: 410px) and (max-width: 429px) {
+  .organisme-container {
+    margin: 2rem;
+    padding: 2rem;
+    border: #E3DBD8 1px solid;
+    display: flex;
+    flex-direction: column-reverse;
+    height: 80vh;
+  }
+
+  .image1 {
+    top: 2%;
+    width: 100%;
+  }
+
+  .organisme-section {
+    margin-top: -12%;
+  }
+
+  .titre1 {
+    font-size: x-large;
+  }
+
+  .bare1 {
+    margin-top: 1rem;
+  }
+
+  .containers {
+    display: flex;
+    align-items: end;
+  }
+
+  .button1,
+  .button2 {
+    border-radius: 0.3rem;
+  }
+}
+
+/* Grands écrans : 430px et plus */
+@media (min-width: 430px) {
+  .organisme-container {
+    margin: 2rem;
+    padding: 2rem;
+    border: #E3DBD8 1px solid;
+    display: flex;
+    flex-direction: column-reverse;
+    height: 65vh;
+  }
+
+  .organisme-section {
+    margin-top: -30%;
+  }
+}
 
 
-     .button1 {
-         border-radius: 0.3rem;
-     }
-
-     .button2 {
-         border-radius: 0.3rem;
-     }
- }
 
  @media (min-width:2560px) {
      .organisme-container {
