--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -75,7 +75,7 @@ body {
   color: #FFC300;
 
   font-weight: 500;
-  font-size: clamp(1.5rem, 3vw, 3.5rem);
+  font-size: clamp(2.5rem, 3vw, 3.5rem);
   z-index: 10;
 
 }
@@ -118,10 +118,11 @@ body {
 
   letter-spacing: 0%;
   text-align: right;
-  font-size: clamp(1rem, 3vw, 1.5rem);
+  font-size: clamp(1.3rem, 3vw, 1.5rem);
   line-height: 1.6;
   width: 60%;
   z-index: 10;
+  /* background-color: saddlebrown; */
 }
 
 .activite-groupe {
@@ -247,7 +248,15 @@ body {
   /* background-color: antiquewhite; */
   align-items: right;
   text-align: right;
-  direction: rtl
+  direction: rtl;
+   font-family: 'Merriweather', serif;
+    
+  font-weight: 400;
+  font-style: normal; 
+  font-size: clamp(1.3rem, 2vw, 1.6rem); 
+  line-height: 1.5; /* 30px sur 20px => 1.5 */
+  letter-spacing: 0;
+  text-align: right;
 }
 
 .activite-content h4 {
