--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -24,7 +24,7 @@ width: 100%;
   max-width: 100vw;
     height: auto;
     position:relative;
-    overflow: hidden;
+    /* overflow: hidden; */
    
    
   
@@ -35,7 +35,7 @@ width: 100%;
     flex-direction: column;
     gap:2rem;
     padding:1rem;
-    position:relative; background: #FCFAF8;
+    position:relative; background: red;
 
     padding-bottom: 10rem;
    
