--- a/FrontEnd/src/assets/styles/our.css
+++ b/FrontEnd/src/assets/styles/our.css
@@ -241,7 +241,7 @@ background-color:white;
 
 }
 
-@media(min-width:1440px) and ( max-width:1555px) {
+/* @media(min-width:1440px) and ( max-width:15px) {
 
 
 
@@ -264,8 +264,58 @@ background-color:white;
   
   }
  
-}
+} */
 
+@media(min-width:2560px){
+
+
+  .our-section{
+    /* background-color: darkcyan; */
+  }
+  .titre{
+    /* background-color: red; */
+    width:100%;
+    color:pink;
+    font-size: 2.1rem;
+
+    
+    
+  }
+  .groupes{
+    gap:2rem;
+  }
+  .our-p{
+   
+    width:80%;
+    font-size: 1.8rem;
+    /* background-color: darkblue; */
+  }
+  .div-p{
+    /* background-color: red; */
+    /* width:100%; */
+  }
+  .our-care{
+    padding:0rem;
+    gap:3rem;
+    display:flex;
+    justify-content: center;
+    align-items: right;
+  }
+  .our-care p{
+    /* background-color: aqua; */
+    width:80%;
+    font-size: 1.7rem;
+  }
+  .btt-div{
+    /* background-color:pink; */
+    width:80%;
+  }
+  .btn-care{
+    font-size: 1.5rem;
+  }
+
+   
+}
 @media (max-width: 1024px) and (min-width: 769px) {
   .care-section{
  
@@ -496,18 +546,22 @@ gap:1rem;
     height: 40vh;
     padding:0rem;
    
+   
   }
   
   .our-p{
     /* background-color: #38B000; */
-    width:100%;z-index: 800;
+    width:90%;z-index: 800;
+    /* background-color: darkblue; */
   }
   .div-p{
     /* background-color: #4A4A4A; */
     padding-right:1rem;
+/* background-color: darkcyan; */
   }
   .our-title{
      padding-right:1rem;
+     /* background-color: darkgreen; */
   }
   .graph30{
     /* background-color: blue; */
@@ -527,6 +581,12 @@ gap:1rem;
 
     width:8%;
 
+  }
+  .btt-div{
+    /* background-color: darkcyan; */
+    display:flex;
+    justify-content: right;
+    width:90%;
   }
 }
 
