--- a/FrontEnd/src/assets/styles/our.css
+++ b/FrontEnd/src/assets/styles/our.css
@@ -275,7 +275,7 @@ background-color:white;
   .titre{
     /* background-color: red; */
     width:100%;
-    color:pink;
+    /* color:pink; */
     font-size: 2.1rem;
 
     
