--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -12,7 +12,13 @@ body {
   margin: 0;
   /* padding: 0;*/
   /* background-color: #FFB700;  */
+  background: #FCFAF8;
+
 }
+
+/* Thème clair par défaut */
+
+
 
 .activities-section {
   /* background-color: blue; */
@@ -28,6 +34,8 @@ body {
   height: auto;
   position:relative;
   z-index: 5;
+  background: #FCFAF8;
+
 
 }
 .activite-graph30{
